--- a/sonic_app/app/templates/base.html
+++ b/sonic_app/app/templates/base.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+{% block head %}
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="/static/css/spinner.css" type="text/css">
     <link rel="stylesheet" href="/static/css/my.css" type="text/css">
     <script src="/static/js/jquery-latest.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/my.js"></script>
+    <script src="/static/js/sonic.js"></script>
     <script src="http://maps.google.com/maps/api/js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="csrf-token" content="{{ csrf_token() }}">
     {% if title %}
     <title>{{ title }} - Sonic App</title>
     {% else %}
     <title>Welcome to Sonic App</title>
     {% endif %}
+{% endblock %}
 </head>
 <body>
 
