--- a/sonic_app/device/templates/device.html
+++ b/sonic_app/device/templates/device.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
+{%block content%}
 {% if form.device%}
-<form class="form-horizontal" role="form" action="{{url_for('edit_device', device_id=form.device.id)}}">
+<form class="form-horizontal" role="form" action="{{url_for('device.edit_device', device_id=form.device.id)}}" method="post">
   {%else%}
-  <form class="form-horizontal" role="form" action="{{url_for('create_device')}}">
+  <form class="form-horizontal" role="form" action="{{url_for('device.create_device')}}" method="post">
     {%endif%}
   {{ form.hidden_tag() }}
   <div class="form-group">
@@ -21,9 +22,11 @@
     <div class="col-sm-offset-2 col-sm-10">
       {% if form.device %}
       <button type="submit" class="btn btn-default">Update</button>
+      <a type="submit" class="btn btn-default" role="button" href="{{url_for('device.edit_layout', device_id=form.device.id)}}">Layout</a>
       {% else %}
       <button type="submit" class="btn btn-default">Create</button>
       {% endif %}
     </div>
   </div>
 </form>
+  {% endblock %}
