--- a/sonic_app/app/templates/base.html
+++ b/sonic_app/app/templates/base.html
@@ -10,6 +10,7 @@
     <script src="/static/js/sonic.js"></script>
     <script src="http://maps.google.com/maps/api/js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csrf-token" content="{{ csrf_token() }}">
     {% if title %}
     <title>{{ title }} - Sonic App</title>
     {% else %}
