--- a/sonic_app/core/templates/index.html
+++ b/sonic_app/core/templates/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "base.html" %}
+{%block content%}
+<div class="container">
+    <div class="row">
+        <h2><a href="{{url_for('device.list')}}">Devices</a></h2>
+    </div>
+</div>
+{%endblock%}
