--- a/sonic_app/device/templates/device.html
+++ b/sonic_app/device/templates/device.html
@@ -1,32 +1,30 @@
 {% extends "base.html" %}
 {%block content%}
-{% if form.device%}
-<form class="form-horizontal" role="form" action="{{url_for('device.edit_device', device_id=form.device.id)}}" method="post">
-  {%else%}
-  <form class="form-horizontal" role="form" action="{{url_for('device.create_device')}}" method="post">
-    {%endif%}
-  {{ form.hidden_tag() }}
-  <div class="form-group">
-    <label class="control-label col-sm-2" for="email">Name:</label>
-    <div class="col-sm-10">
-      {{ form.name }}
+<div class="container">
+  <div class="row">
+    <div class="col-xs-6 col-md-6">
+      <h2>Create new device</h2>
+      <form class="form-horizontal" role="form" action="{{url_for('device.create')}}" method="post">
+        {{ form.hidden_tag() }}
+        <div class="form-group">
+          <label class="control-label col-sm-2" for="email">Name:</label>
+          <div class="col-sm-10">
+            {{ form.name }}
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2" for="pwd">Model:</label>
+          <div class="col-sm-10">
+            {{ form.model }}
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-info">Create</button>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
-  <div class="form-group">
-    <label class="control-label col-sm-2" for="pwd">Model:</label>
-    <div class="col-sm-10">
-      {{ form.model }}
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      {% if form.device %}
-      <button type="submit" class="btn btn-default">Update</button>
-      <a type="submit" class="btn btn-default" role="button" href="{{url_for('device.edit_layout', device_id=form.device.id)}}">Layout</a>
-      {% else %}
-      <button type="submit" class="btn btn-default">Create</button>
-      {% endif %}
-    </div>
-  </div>
-</form>
-  {% endblock %}
+</div>
+{% endblock %}
